@@ -1,6 +1,7 @@
 Revision History for ConsumerGroups
 
 {{$NEXT}}
+        Pass log context to redis streams message
 
 0.02      2023-02-23 04:18:42+00:00 UTC
         Rename msg_group to category
